# content-synchronizer

./: .gitignore  Dockerfile  README.md  credentials.yml.example  namespaces.py  override_module_titles.py  pipeline-sync.yml  pipemgr  remove_pi.py  requirements.txt  sync.md  sync.sh  sync_staging.yml  test_sync_scripts.py  update_metadata.py  vars.yml
content-repo-creator/: Dockerfile  books.json  create_book_repo.py  gh.json  requirements.txt
licenses/: by-nc-sa-4.0  by-sa-4.0
pipemgr/: Dockerfile  README.md  pyproject.toml  requiremenst.txt  requirements.txt
pipemgr/dist.old/: pipemgr-0.1.3-py3-none-any.whl
pipemgr/env/: .bashrc  .flyrc
pipemgr/src/: __init__.py  cli.py  create_pipeline.py  extract_resources.py  manage_books.py  osbook_utils.py  remote.py  utils.py
pipemgr/src/concourse/: api.py  routes.py
pipemgr/src/concourse/models/: disk_token_cache.py  ldap_token_provider.py  session.py  token_cache.py  token_provider.py
pipemgr/src/models/: __init__.py  args.py  concourse_handler.py
pipemgr/src/pipemgr/: __init__.py  cli.py  create_pipeline.py  extract_resources.py  manage_books.py  osbook_utils.py  utils.py
pipemgr/src/pipemgr/concourse/: utils.py
pipemgr/src/pipemgr/concourse/models/: __init__.py  concourse_sessions.py  disk_token_cache.py  ldap_token_provider.py  session.py  token_provider.py
pipemgr/src/pipemgr/concourse/tests/: test_concourse.py
pipemgr/src/pipemgr/models/: __init__.py  concourse_handler.py  diff_result.py  osbook.py
pipemgr/src/pipemgr/templates/: pipeline.yml
pipemgr/src/pipemgr/tests/: test_pipeline_management.py
pipemgr/src/templates/: job.yml  pipeline.yml
pipemgr/tests/: test_pipeline_management.py
sync-trigger/: check.py  (+5 more)
(+59 files in other folders)
